crates/rascal/src/snapshots/rascal__program__tests__all_samples@inline_pcode.as.snap
---
source: crates/rascal/src/program.rs
expression: parsed
input_file: samples/as2/inline_pcode.as
---
Ok:
  initial_script:
    - Expr:
        span:
          start: 0
          end: 207
        value:
          Function:
            signature:
              name:
                span:
                  start: 9
                  end: 26
                value: traceThroughPcode
              args:
                - name: message
                  type_name: ~
                  register: ~
              return_type: ~
            body:
              - Expr:
                  span:
                    start: 42
                    end: 88
                  value:
                    Trace:
                      span:
                        start: 48
                        end: 87
                      value:
                        Constant:
                          String: "-- start of a very special message --"
              - InlinePCode: "\n        Push \"message\"\n        GetVariable\n        Trace\n    "
              - Expr:
                  span:
                    start: 170
                    end: 204
                  value:
                    Trace:
                      span:
                        start: 176
                        end: 203
                      value:
                        Constant:
                          String: "-- end special message --"
            scope:
              defined_variables:
                this:
                  used: false
                  used_in_inner_scope: false
                arguments:
                  used: false
                  used_in_inner_scope: false
                super:
                  used: false
                  used_in_inner_scope: false
                _root:
                  used: false
                  used_in_inner_scope: false
                _parent:
                  used: false
                  used_in_inner_scope: false
                _global:
                  used: false
                  used_in_inner_scope: false
                message:
                  used: false
                  used_in_inner_scope: false
              referenced_variables: []
              could_reference_anything: false
            register_count: 1
            preload_this: false
            suppress_this: true
            preload_arguments: false
            suppress_arguments: true
            preload_super: false
            suppress_super: true
            preload_root: false
            preload_parent: false
            preload_global: false
    - Expr:
        span:
          start: 209
          end: 243
        value:
          Call:
            name:
              span:
                start: 209
                end: 226
              value:
                Constant:
                  Identifier: traceThroughPcode
            args:
              - span:
                  start: 227
                  end: 242
                value:
                  Constant:
                    String: "Hello, world!"
  interfaces: []
  classes: []
  custom_pcodes: []
  compile_options:
    swf_version: 15
    optimizations:
      fold_constants: true
      promote_variables_to_registers: true
